--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  clear: both;
+  position: relative;
   height: 60px;
+  margin-top: auto;
   background-color: #f5f5f5;
 }
